<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/black" >
    
    <!--  <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:background="@color/black"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/splash_story"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="20sp" /> -->

    <TextView
        android:id="@+id/textViewJ1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/jump_title_1"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/textViewJ2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/jump_title_2" />

    <Button
        android:id="@+id/buttonmenuJ1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:background="@color/offblack"
        android:textColor="@color/white"
        android:text="@string/jump_button_1" />
    
    <Button
        android:id="@+id/buttonmenuJ2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:background="@color/offblack"
        android:textColor="@color/white"
        android:text="@string/jump_button_2" />

    <Button
        android:id="@+id/buttonmenuJ3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/offblack"
        android:text="@string/jump_button_3"
        android:textAllCaps="true"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonmenuJ4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/offblack"
        android:text="@string/jump_button_4"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</LinearLayout>