<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <TextView
       android:id="@+id/textViewD1"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="40dp"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:layout_marginTop="20dp"
       android:gravity="center_horizontal"
       android:text="@string/dash_title_1"
       android:textAllCaps="true"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:textColor="@color/white"
       android:textSize="20sp" />
                   
   <TextView
       android:id="@+id/textViewD2"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:gravity="center_horizontal"
       android:text="@string/dash_title_2"
       android:textColor="@color/white"
       android:textSize="20sp" />

   <Button
       android:id="@+id/buttonmenuD1"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:layout_marginTop="10dp"
       android:background="@color/offblack"
       android:text="@string/dash_button_1"
       android:textAllCaps="true"
       android:textColor="@color/white" />

   <Button
       android:id="@+id/buttonmenuD2"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:layout_marginTop="10dp"
       android:background="@color/offblack"
       android:text="@string/dash_button_2"
       android:textAllCaps="true"
       android:textColor="@color/white" />

</LinearLayout>